--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
     tools:context=".ComposeActivity">
 
     <Button
         android:id="@+id/Tweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/composeText"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/composeText"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="179dp"
         android:onClick="onClick"
         android:text="Tweet"
+        android:background="@color/twitter_blue"
+        android:textColor="@color/white"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="184dp" />
 
@@ -27,6 +30,14 @@
         android:layout_marginStart="27dp"
         android:layout_marginTop="27dp"
         android:ems="10"
-        android:inputType="textMultiLine"/>
+        android:inputType="textMultiLine" />
+
+    <TextView
+        android:id="@+id/wordCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/Tweet"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="159dp" />
 
 </RelativeLayout>
