--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:textColor="@color/white"
+        android:background="@color/twitter_blue"
         android:layout_margin="20dp"
         android:onClick="loginToRest"
         android:text="@string/login_label" />
