--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,8 @@
 
     <item
         android:id="@+id/Compose"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/vector_compose_shortcut"
+        android:tint="@color/twitter_blue"
         android:onClick="onComposeAction"
         app:showAsAction="ifRoom"
         android:title="Compose">
