--- a/app/src/main/res/layout/activity_tweet_details.xml
+++ b/app/src/main/res/layout/activity_tweet_details.xml
@@ -31,4 +31,39 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="65dp"
         android:text="TextView" />
+
+    <ImageButton
+        android:id="@+id/reply_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginVertical="25dp"
+        android:layout_below="@+id/tvBody"
+        android:onClick="onReplyClick"
+        android:background="@null"
+        app:srcCompat="@drawable/twitter_reply" />
+
+    <ImageButton
+        android:id="@+id/heart_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="270dp"
+        android:layout_marginVertical="25dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/tvBody"
+        android:background="@null"
+        app:srcCompat="@drawable/ic_vector_heart_stroke" />
+
+    <ImageButton
+        android:id="@+id/retweet_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="172dp"
+        android:layout_marginVertical="25dp"
+        android:layout_below="@+id/tvBody"
+        android:background="@null"
+        app:srcCompat="@drawable/ic_vector_retweet_stroke" />
+
 </RelativeLayout>
