--- a/app/src/main/res/layout/activity_tweet_details.xml
+++ b/app/src/main/res/layout/activity_tweet_details.xml
@@ -10,26 +10,50 @@
         android:id="@+id/ivProfileImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         app:srcCompat="@android:color/black" />
 
     <TextView
         android:id="@+id/tvUserName"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="57dp"
+        android:layout_alignTop="@+id/ivProfileImage"
+        android:layout_marginStart="85dp"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/tvBody"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="65dp"
+        android:layout_marginLeft="86dp"
+        android:layout_below="@+id/tvUserName"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="0dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/retweetCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="3dp"
+        android:layout_alignLeft="@+id/retweet_button"
+        android:layout_alignTop="@+id/retweet_button"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/favoriteCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="3dp"
+        android:layout_alignLeft="@+id/heart_button"
+        android:layout_alignTop="@+id/heart_button"
         android:text="TextView" />
 
     <ImageButton
@@ -65,5 +89,14 @@
         android:layout_below="@+id/tvBody"
         android:background="@null"
         app:srcCompat="@drawable/ic_vector_retweet_stroke" />
+
+    <TextView
+        android:id="@+id/tvHandle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@+id/tvUserName"
+        android:text="TextView" />
 
 </RelativeLayout>
