--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -39,6 +39,7 @@
         android:layout_below="@+id/tvUserName"
         android:layout_alignStart="@+id/tvUserName"
         android:layout_centerVertical="true"
+        android:autoLink="all"
         android:text="TextView" />
 
     <TextView
