--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -6,18 +6,29 @@
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         style="@style/HeaderBar"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:elevation="4dp" />
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:elevation="4dp">
+
+        <ImageView
+            android:id="@+id/twitterIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/ic_launcher_twitter" />
+
+    </android.support.v7.widget.Toolbar>
 
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/swipeContainer"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -29,5 +40,6 @@
             android:layout_alignParentTop="true" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </RelativeLayout>
