--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -30,6 +30,7 @@
         android:layout_marginStart="27dp"
         android:layout_marginTop="27dp"
         android:ems="10"
+        android:hint="What's happening?"
         android:inputType="textMultiLine" />
 
     <TextView
